<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="udacity.miguellucas.com.udacity_5_quizapp.MainActivity">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/android_green_background" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/border"
                android:layout_margin="24dp"
                android:padding="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/question1"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:id="@+id/question1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/question1_text"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:layout_below="@+id/question1"
                    android:id="@+id/question1_text"/>

                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@id/question1_text" >

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question1_option1"
                        android:textSize="16sp" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question1_option2"
                        android:textSize="16sp" />

                </RadioGroup>

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question1_option3"
                        android:textSize="16sp" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question1_option4"
                        android:textSize="16sp" />

                </RadioGroup>

            </RelativeLayout>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/border"
                android:layout_margin="24dp"
                android:padding="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/question2"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:id="@+id/question2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/question2_text"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:layout_below="@+id/question2"
                    android:id="@+id/question2_text"/>

                <RadioGroup
                    android:id="@+id/radioGroup3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@id/question2_text" >

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question2_option1"
                        android:textSize="16sp" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question2_option2"
                        android:textSize="16sp" />

                </RadioGroup>

                <RadioGroup
                    android:id="@+id/radioGroup4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question2_option3"
                        android:textSize="16sp" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question2_option4"
                        android:textSize="16sp" />

                </RadioGroup>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/border"
                android:layout_margin="24dp"
                android:padding="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/question3"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:id="@+id/question3"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/question3_text"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:layout_below="@+id/question3"
                    android:id="@+id/question3_text"/>

                <RadioGroup
                    android:id="@+id/radioGroup5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@id/question3_text" >

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question3_option1"
                        android:textSize="16sp" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question3_option2"
                        android:textSize="16sp" />

                </RadioGroup>

                <RadioGroup
                    android:id="@+id/radioGroup6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question3_option3"
                        android:textSize="16sp" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question3_option4"
                        android:textSize="16sp" />

                </RadioGroup>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/border"
                android:layout_margin="24dp"
                android:padding="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/question4"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:id="@+id/question4"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/question4_text"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:layout_below="@+id/question4"
                    android:id="@+id/question4_text"/>

                <RadioGroup
                    android:id="@+id/radioGroup7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@id/question4_text" >

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question4_option1"
                        android:textSize="16sp" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question4_option2"
                        android:textSize="16sp" />

                </RadioGroup>

                <RadioGroup
                    android:id="@+id/radioGroup8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question4_option3"
                        android:textSize="16sp" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question4_option4"
                        android:textSize="16sp" />

                </RadioGroup>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/border"
                android:layout_margin="24dp"
                android:padding="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/question5"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:id="@+id/question5"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/question5_text"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:layout_below="@+id/question5"
                    android:id="@+id/question5_text"/>

                <RadioGroup
                    android:id="@+id/radioGroup9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@id/question5_text" >

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question5_option1"
                        android:textSize="16sp" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question5_option2"
                        android:textSize="16sp" />

                </RadioGroup>

                <RadioGroup
                    android:id="@+id/radioGroup10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question5_option3"
                        android:textSize="16sp" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question5_option4"
                        android:textSize="16sp" />

                </RadioGroup>

            </RelativeLayout>

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="18sp"
                android:onClick="submit"
                android:layout_weight="1"
                android:text="@string/submit" />
        </LinearLayout>




    </ScrollView>


</RelativeLayout>
