<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="udacity.miguellucas.com.udacity_5_quizapp.MainActivity">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/android_green_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="26dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/title"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-medium"
            android:text="@string/main_screen_text"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="italic"
            android:layout_weight="15"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="18sp"
            android:onClick="start"
            android:layout_weight="1"
            android:text="@string/start" />

    </LinearLayout>


</RelativeLayout>
